Fixed graph-wrapper + broken style.

--- a/src/app/pages/details/details.component.scss
+++ b/src/app/pages/details/details.component.scss
@@ -9,6 +9,7 @@ h1 {
     font-size: 26px;
     margin: auto;
     margin-bottom: 20px;
+    width: fit-content;
 }
 .intro {
     margin: auto;
@@ -57,4 +58,5 @@ a {
 .graph-wrapper {
     width: 700px;
     height: 400px;
+    margin: auto;
 }
