--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,6 +6,7 @@ h1 {
     font-size: 26px;
     margin: auto;
     margin-bottom: 20px;
+width: fit-content;
 }
 .intro {
     margin: auto;
