--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
     font-family: system-ui, sans-serif;
     font-weight: 200;
     letter-spacing: 1px;
-    width: fit-content;
+    //width: fit-content;
 }
 
 body {
